--- a/apps/angular-test-app/src/app/components/home/home.component.scss
+++ b/apps/angular-test-app/src/app/components/home/home.component.scss
@@ -54,6 +54,9 @@
 }
 
 .home-list {
+  z-index: 1;
+  background: var(--fds-background);
+
   box-sizing: border-box;
   width: 100%;
   max-width: 960px;
@@ -67,6 +70,32 @@
 
     .mat-mdc-card {
       cursor: pointer;
+    }
+  }
+}
+
+.card-container {
+  position: relative;
+
+  .banner {
+    visibility: hidden;
+
+    position: absolute;
+    top: -11px;
+    border-top-left-radius: 16px;
+    border-bottom-right-radius: 16px;
+    color: var(--fds-on-primary);
+    padding: 2px 24px;
+    border-bottom: 2px solid var(--fds-background);
+    border-right: 2px solid var(--fds-background);
+    width: max-content;
+    cursor: default;
+    z-index: 2;
+
+    &.migrated {
+      visibility: visible;
+
+      background: var(--fds-success);
     }
   }
 }
