fix user profile + menu + popover

--- a/apps/angular-test-app/src/app/components/user-profile-menu-demo/user-profile-menu-demo-component.component.html
+++ b/apps/angular-test-app/src/app/components/user-profile-menu-demo/user-profile-menu-demo-component.component.html
@@ -47,7 +47,7 @@
   </uxg-user-profile-menu>
 </div>
 
-<h5 class="uxg-h5">Avatar with contents and actions and details</h5>
+<h5 class="uxg-h5">Avatar with content and actions and details</h5>
 <div class="flex-row example-row">
   <uxg-user-profile-menu color="initials" [user]="vinh" headerType="hero">
     <ng-template uxgUserProfilePanelDetails>
