--- a/libs/angular-theme/_base.scss
+++ b/libs/angular-theme/_base.scss
@@ -10,3 +10,5 @@
 @import './lib/badge/badge';
 @import './lib/logo/logo';
 @import './lib/toolbar/toolbar';
+@import './lib/block/title';
+@import './lib/menu/menu';
