--- a/libs/angular-theme/lib/core/theming/_all-theme.scss
+++ b/libs/angular-theme/lib/core/theming/_all-theme.scss
@@ -19,7 +19,7 @@
 // @use '../../chips/chips-theme';
 // @use '../../expansion/expansion-theme';
 // @use '../../form-field/form-field-theme';
-// @use '../../menu/menu-theme';
+@use '../../menu/menu-theme';
 // @use '../../slide-toggle/slide-toggle-theme';
 // @use '../../table/table-theme';
 // @use '../../tabs/tabs-theme';
@@ -79,7 +79,7 @@
   // @include chips-theme.theme($theme);
   // @include expansion-theme.theme($theme);
   // @include form-field-theme.theme($theme);
-  // @include menu-theme.theme($theme);
+  @include menu-theme.theme($theme);
   // @include slide-toggle-theme.theme($theme);
   // @include table-theme.theme($theme);
   // @include tabs-theme.theme($theme);
