--- a/apps/angular-test-app/src/app/components/repeater-demo/repeater-card-example/_repeater-card-example.theme.scss
+++ b/apps/angular-test-app/src/app/components/repeater-demo/repeater-card-example/_repeater-card-example.theme.scss
@@ -1,12 +1,7 @@
-@use 'sass:map';
-@use 'angular-theme' as fds;
-
 @mixin theme($theme) {
-  $accent: map.get($theme, accent);
-  $border-accent-color: fds.get-color-from-palette($accent, default);
   .simple-card {
     &.selected {
-      border-bottom: 2px solid $border-accent-color;
+      border-bottom: 2px solid var(--fds-secondary);
     }
   }
 }
