--- a/apps/angular-test-app/src/styles.scss
+++ b/apps/angular-test-app/src/styles.scss
@@ -2,6 +2,9 @@
 @use 'angular-theme/base';
 @use 'angular-components/toaster/src/toaster.theme' as toaster;
 @use 'angular-components/skeleton-text/src/skeleton-text.theme' as skeleton;
+@use 'angular-components/video-thumbnail/src/video-thumbnail.theme' as video-thumbnail;
+
+@use './app/components/repeater-demo/repeater-card-example/repeater-card-example.theme' as repeater;
 
 @include fds.uxg-core();
 
@@ -17,9 +20,9 @@
   // @include chart.theme($theme);
   // @include wizard.theme($theme);
   // @include banner.theme($theme);
-  // @include repeater.theme($theme);
+  @include repeater.theme($theme);
   // @include changelog.theme($theme);
-  // @include video-thumbnail.theme($theme);
+  @include video-thumbnail.theme($theme);
   // @include status-stepper.theme($theme);
 }
 
