--- a/apps/angular-test-app/src/app/components/entity-menu-demo/entity-menu-demo.component.html
+++ b/apps/angular-test-app/src/app/components/entity-menu-demo/entity-menu-demo.component.html
@@ -45,7 +45,7 @@
     (itemClick)="displayItem($event)"
   >
     <uxg-entity-menu-actions>
-      <a class="uxg-body-3 view-all" href="/">View All</a>
+      <a class="uxg-body-3 uxg-link flex justify-center" href="/">View All</a>
     </uxg-entity-menu-actions>
   </uxg-entity-menu>
 </div>
