--- a/apps/angular-test-app/src/app/components/filter-panel-demo/filter-panel-demo.component.html
+++ b/apps/angular-test-app/src/app/components/filter-panel-demo/filter-panel-demo.component.html
@@ -39,7 +39,8 @@
             <h5 class="uxg-h5">Tags, appearance type outline</h5>
             <button mat-button (click)="demoFilterTags.clearSelection()" color="accent" dense>Clear all</button>
           </div>
-          <uxg-filter-tags [data]="sampleDataTags" (changes)="updateFilterTags($event)" #demoFilterTags> </uxg-filter-tags>
+          <uxg-filter-tags [data]="sampleDataTags" (changes)="updateFilterTags($event)" [appearance]="'outline'" #demoFilterTags>
+          </uxg-filter-tags>
         </div>
 
         <div class="filter-panel-group-tags">
@@ -48,7 +49,6 @@
             <button mat-button (click)="demoGroupFilterTags.clearSelection()" color="accent" dense>Clear all</button>
           </div>
           <uxg-filter-tags
-            standard
             [appearance]="'outline'"
             [data]="sampleGroupTags"
             [groupTags]="true"
@@ -64,7 +64,7 @@
             <button mat-button (click)="demoMultiselectGroupTags.clearSelection()" color="accent" dense>Clear all</button>
           </div>
           <uxg-filter-tags
-            standard
+            [appearance]="'outline'"
             [data]="sampleMixTags"
             [groupTags]="true"
             [multiple]="true"
@@ -151,7 +151,8 @@
           </div>
           <div class="filter-instance">
             <div class="uxg-h6">Tags</div>
-            <uxg-filter-tags uxgFilter="Tags" [data]="sampleDataTags" (changes)="updateFilterTags($event)"> </uxg-filter-tags>
+            <uxg-filter-tags uxgFilter="Tags" [appearance]="'outline'" [data]="sampleDataTags" (changes)="updateFilterTags($event)">
+            </uxg-filter-tags>
           </div>
 
           <div class="filter-instance">
