--- a/libs/angular-theme/lib/core/theming/_all-theme.scss
+++ b/libs/angular-theme/lib/core/theming/_all-theme.scss
@@ -1,4 +1,6 @@
 /* stylelint-disable no-invalid-position-at-import-rule */
+@use 'sass:map';
+
 @use '@angular/material' as mat;
 
 @use '@finastra/fds-theme/scheme' as scheme;
@@ -26,9 +28,10 @@
 @use '../../toolbar/toolbar-theme';
 
 @use './color-utility';
-@use './theming' as theme;
 
 @mixin uxg-core-theme($theme) {
+  $is-dark: map.get($theme, is-dark);
+
   @at-root {
     body {
       @include color.background(background);
@@ -36,11 +39,11 @@
   }
 
   #{if(&, '&', ':root')} {
-    @if $theme == theme.$light-theme {
+    @if $is-dark {
+      @include color.custom-properties(scheme.dark());
+    } @else {
       @include color.custom-properties(scheme.light());
       @include typography.custom-properties();
-    } @else {
-      @include color.custom-properties(scheme.dark());
     }
 
     @include color.color(on-background);
@@ -56,10 +59,12 @@
 }
 
 @mixin uxg-material-theme($theme) {
-  @if $theme == theme.$light-theme {
-    @include mat.all-component-themes($theme);
-  } @else {
+  $is-dark: map.get($theme, is-dark);
+
+  @if $is-dark {
     @include mat.all-component-colors($theme);
+  } @else {
+    @include mat.all-component-themes($theme);
   }
 
   @include uxg-core-theme($theme);
