--- a/apps/angular-test-app/src/styles.scss
+++ b/apps/angular-test-app/src/styles.scss
@@ -3,10 +3,13 @@
 @use 'angular-components/toaster/src/toaster.theme' as toaster;
 @use 'angular-components/skeleton-text/src/skeleton-text.theme' as skeleton;
 @use 'angular-components/video-thumbnail/src/video-thumbnail.theme' as video-thumbnail;
+@use 'angular-components/wizard/src/wizard.theme' as wizard;
 
 @use './app/components/repeater-demo/repeater-card-example/repeater-card-example.theme' as repeater;
 
 @include fds.uxg-core();
+
+@include wizard.typography();
 
 @mixin app-theme($theme) {
   @include fds.uxg-material-theme($theme);
@@ -18,7 +21,7 @@
   // @include global-search.theme($theme);
   // @include vector-map.theme($theme);
   // @include chart.theme($theme);
-  // @include wizard.theme($theme);
+  @include wizard.theme($theme);
   // @include banner.theme($theme);
   @include repeater.theme($theme);
   // @include changelog.theme($theme);
