--- a/libs/angular-components/changelog/src/_changelog.theme.scss
+++ b/libs/angular-components/changelog/src/_changelog.theme.scss
@@ -2,7 +2,8 @@
 // @use '@angular/material' as mat;
 // @use '@angular/flex-layout/core/sass/layout-bp' as flex-layout;
 @use '@finastra/fds-theme/color' as color;
-@use '@finastra/fds-theme/typography' as typography;
+@use '@angular/material' as mat;
+@use '@finastra/fds-theme/typography/mixins' as typography;
 
 @mixin theme($theme: null) {
   // $primary: map.get($theme, primary);
@@ -30,12 +31,7 @@
         z-index: 10;
       }
       .creator {
-        // TODO: 
-        // background-image: linear-gradient(
-        //   to right,
-        //   color.color(primary),
-        //   color.color(secondary)
-        // );
+        background-image: linear-gradient(to right, #694ED6, #C137A2);
 
         -webkit-text-fill-color: transparent;
         -webkit-background-clip: text;
@@ -50,7 +46,6 @@
     }
 
     .category {
-      // color: color.get-color-from-palette($primary, default);
       @include color.color(primary);
     }
 
@@ -75,18 +70,16 @@
     }
 
     a {
-      // color: map.get($primary, default);
       @include color.color(primary);
       text-decoration: none;
       &:hover {
-        // color: map.get($secondary, default);
         @include color.color(secondary);
       }
     }
 
     .change-detail:not(.last-change) {
-      // border-bottom: 1px solid $divider;
-      @include color.property(border-bottom, divider);
+      @include color.property(border-bottom, foreground);
+      opacity: 0.07;
       border-bottom-width: 1px;
       border-style: solid;
     }
@@ -96,46 +89,40 @@
       .last-release,
       .first-release {
         border-radius: 6px;
-        // background-color: color.get-color-from-palette($background, card);
-        // @include color.property(background-color, $background);
         // @include mat.elevation(4, $elevation-color, 0.6);
-        // TODO
+        // @include color.property(background-color, card);
+        @include color.color(on-surface);
+        @include color.background(surface);
+        @include mat.elevation(4);
+        @include color.color(elevation);
+        // @include color.background(foreground);
+        // opacity: 0.6;
       }
 
       .change {
         .new {
-          // color: map.get($primary, default);
-          // border: 1px solid map.get($primary, default);
-          // background-color: color.get-color-from-palette($primary, default, $labels_background_opacity);
           @include color.color(primary);
           @include color.property(border, primary);
           border-width: 1px;
           border-style: solid;
-          @include color.property(background-color, primary);
-          opacity: 0.03;
+          // @include color.background(primary);
+          // opacity: 0.03;
         }
         .update {
-          // color: map.get($success, default);
-          // border: 1px solid map.get($success, default);
-          // background-color: color.get-color-from-palette($success, default, $labels_background_opacity);
           @include color.color(success);
           @include color.property(border, success);
           border-width: 1px;
           border-style: solid;
-          @include color.property(background-color, success);
-          opacity: 0.03;
+          // @include color.background(success);
+          // opacity: 0.03;
         }
         .bugfix {
-          // color: map.get($error, default);
-          // border: 1px solid map.get($error, default);
-          // background-color: color.get-color-from-palette($error, default, $labels_background_opacity);
           @include color.color(error);
           @include color.property(border, error);
           border-width: 1px;
           border-style: solid;
-
-          @include color.property(background-color, error);
-          opacity: 0.03;
+          // @include color.background(error);
+          // opacity: 0.03;
         }
         .deprecated {
           // color: color.get-color-from-palette($foreground, text, 0.8);
@@ -149,15 +136,13 @@
           border-width: 1px;
           border-style: solid;
           
-          // @include color.property(background-color, $mat-grey);
+          // @include color.background(on-surface);
           // opacity: 0.03;
-          // TODO
         }
       }
 
       .release-detail {
         &::after {
-          // border-left: 2px dotted map.get($primary, default);
           @include color.property(border-left, primary);
           border-left-width: 2px;
           border-left-style: dotted;
@@ -166,8 +151,7 @@
 
       .first-release {
         &::after {
-          // background-color: map.get($primary, default);
-          @include color.property(background-color, primary);
+          @include color.background(primary);
         }
       }
 
@@ -178,30 +162,26 @@
         // background-color: map.get($primary, default);
         // @include color.color($background);
         // TODO:
-
+        // @include color.color(background);
         @include color.property(border, primary);
         border-style: solid;
         border-width: 8px;
 
-        @include color.property(background-color, primary);
-
+        @include color.background(primary);
       }
 
       .first-release::before {
-        // background-color: map.get($background, card);
-        // border: 5px solid map.get($primary, default);
+        @include color.background(surface);
+
         @include color.property(border, primary);
         border-style: solid;
         border-width: 5px;
-
-        // TODO:
-        // @include color.property(background-color, $background);
       }
     }
   }
 }
 
-@mixin typography($config) {
+@mixin typography($config: null) {
   uxg-changelog {
     .title {
       .creator {
@@ -214,33 +194,33 @@
     }
 
     .date {
-      @include typography.typography(subtitle-1);
+      @include typography.typography(uxg-subtitle-1);
       white-space: nowrap;
       margin: 0;
     }
 
     .version-id {
-      @include typography.typography(subtitle-1);
+      @include typography.typography(uxg-subtitle-1);
       margin-bottom: 0;
     }
 
     .category {
-      @include typography.typography(h4);
+      @include typography.typography(uxg-h4);
     }
 
     // @include flex-layout.layout-bp(xs) {
     //   .title {
     //     .creator {
-    //       @include mat.typography-level($config, h3);
+    //       @include typography.typography-level($config, h3);
     //     }
 
     //     span {
-    //       @include mat.typography-level($config, h3);
+    //       @include typography.typography-level($config, h3);
     //     }
     //   }
 
     //   .category {
-    //     @include mat.typography-level($config, h5);
+    //     @include typography.typography-level($config, h5);
     //   }
     // }
   }
